--- a/app/templates-raw/email-templates/email-templates-announcement.handlebars
+++ b/app/templates-raw/email-templates/email-templates-announcement.handlebars
@@ -1,12 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
-<head>
-<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-<meta name="viewport" content="width=device-width" />
-<meta name="format-detection" content="telephone=no">
-<!-- Main styles -->
-</head>
-
-<body marginheight="0" topmargin="0" marginwidth="0" style="margin: 0px; background-color: white;" bgcolor="white" leftmargin="0">
+<body>
+<!-- HTML comment -->
 </body>
 </html>
